# Credit-Risk-Analytics

./: .gitignore  README.md  databricks.yml  pyproject.toml
docs/: architecture.md  data_dictionary.md  deployment_guide.md  project_flow.md
notebooks/: 01_bronze_ingestion.py  02_silver_transformations.py  03_gold_analytics.py  04_orchestrator.py
resources/: credit_risk_job.yml
src/: __init__.py
src/analytics/: credit_risk_scorer.py
src/config/: settings.py
src/ingestion/: bronze_loader.py
src/transformations/: customer_transformer.py  defaulter_transformer.py  loan_transformer.py  repayment_transformer.py
src/utils/: logger.py  spark_utils.py
tests/: conftest.py  test_customer_transformer.py
